testdata/golden/invalid/features/units_cross_category.cm
# Cross-Category Invalid Operations

## Cannot mix Temperature with other units
10 celsius + 5 meters

100 fahrenheit + 10 kilograms

## Cannot mix Speed with Length
50 mph + 10 meters

100 kph + 5 kilometers

## Cannot mix Energy with Power
1000 joules + 100 watts

1 kwh + 1 kilowatt

## Cannot mix Power with anything else
1 horsepower + 10 meters

5 watts + 5 kilograms

## Cannot mix Energy with Mass
100 calories + 5 grams

1 kj + 1 kilogram

## Cannot mix Temperature with Energy
100 celsius + 1000 joules

50 fahrenheit + 1 kwh
